--- a/Journey/Journey/Resources/Storyboards/Feed/FeedDetail.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/FeedDetail.storyboard
@@ -23,6 +23,10 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sampleHappinessImg" translatesAutoresizingMaskIntoConstraints="NO" id="SR4-wW-o85">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="505"/>
                                     </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dcL-tH-a0E">
+                                        <rect key="frame" x="0.0" y="570.5" width="366" height="125.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="journeySmileSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="jNH-U8-g6Q">
                                         <rect key="frame" x="141.5" y="464" width="83" height="83"/>
                                         <constraints>
@@ -30,58 +34,74 @@
                                             <constraint firstAttribute="width" constant="83" id="9fF-ov-sFE"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시원 스쿨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkK-Rh-DUC">
-                                        <rect key="frame" x="142.5" y="607.5" width="81" height="26.5"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                                        <color key="textColor" name="White"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021.06.28 (월)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONW-5R-Ge8">
                                         <rect key="frame" x="140" y="556" width="86.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" name="White"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="맛있는 피자에 시원한 맥주 마시고 신선한 날씨에 담배 한대 폈어요." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEV-gq-tN2">
-                                        <rect key="frame" x="36" y="649" width="294" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" name="White"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XiP-Ee-iqh">
+                                        <rect key="frame" x="36" y="598.5" width="294" height="70"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시원 스쿨" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkK-Rh-DUC">
+                                                <rect key="frame" x="0.0" y="0.0" width="294" height="21.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <color key="textColor" name="White"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="맛있는 피자에 시원한 맥주 마시고 맛있는 피자에 시원한 맥주 마시고" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEV-gq-tN2">
+                                                <rect key="frame" x="0.0" y="31.5" width="294" height="38.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" name="White"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#여름좋아요 #산책갑시다요 #안녕하세요안 #ㅋㅋㅋㅋㅋㅋ #ㅉㅉㅋㅋㅋㅋ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NO4-28-RnW">
-                                        <rect key="frame" x="36" y="711.5" width="294" height="33.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <rect key="frame" x="36" y="696" width="294" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <color key="textColor" name="hashtagPink"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmd-gQ-7uf">
-                                        <rect key="frame" x="325.5" y="615" width="12.5" height="12"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                        <color key="textColor" name="White"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Ci1-gR-hHB">
+                                        <rect key="frame" x="167" y="738" width="32" height="22"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2F0-sU-1IS">
+                                                <rect key="frame" x="0.0" y="0.0" width="14" height="22"/>
+                                                <state key="normal" image="icnHeart"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIc-eg-Bsn">
+                                                <rect key="frame" x="18" y="0.0" width="14" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <color key="textColor" name="White"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" name="darkGray"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="NO4-28-RnW" secondAttribute="trailing" constant="36" id="15j-3b-xVX"/>
-                                    <constraint firstItem="mmd-gQ-7uf" firstAttribute="centerY" secondItem="kkK-Rh-DUC" secondAttribute="centerY" id="66w-5p-MSs"/>
-                                    <constraint firstAttribute="bottom" secondItem="NO4-28-RnW" secondAttribute="bottom" constant="35" id="Kwm-xc-ltD"/>
+                                    <constraint firstItem="NO4-28-RnW" firstAttribute="top" secondItem="dcL-tH-a0E" secondAttribute="bottom" id="7PP-ke-POW"/>
+                                    <constraint firstItem="dcL-tH-a0E" firstAttribute="leading" secondItem="QOB-Xg-u2l" secondAttribute="leading" id="ApF-iZ-w0E"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ci1-gR-hHB" secondAttribute="bottom" constant="20" id="Jn6-2S-fj8"/>
+                                    <constraint firstAttribute="bottom" secondItem="NO4-28-RnW" secondAttribute="bottom" constant="55" id="Kwm-xc-ltD"/>
+                                    <constraint firstItem="XiP-Ee-iqh" firstAttribute="leading" secondItem="QOB-Xg-u2l" secondAttribute="leading" constant="36" id="ObE-e0-vQ3"/>
                                     <constraint firstItem="SR4-wW-o85" firstAttribute="top" secondItem="QOB-Xg-u2l" secondAttribute="top" id="Qaq-qF-KHJ"/>
+                                    <constraint firstItem="Ci1-gR-hHB" firstAttribute="centerX" secondItem="QOB-Xg-u2l" secondAttribute="centerX" id="Qs3-XU-8Pq"/>
                                     <constraint firstItem="ONW-5R-Ge8" firstAttribute="centerX" secondItem="QOB-Xg-u2l" secondAttribute="centerX" id="RVp-ZY-X28"/>
-                                    <constraint firstItem="kkK-Rh-DUC" firstAttribute="top" secondItem="ONW-5R-Ge8" secondAttribute="bottom" constant="37" id="UET-ed-5Ku"/>
+                                    <constraint firstItem="dcL-tH-a0E" firstAttribute="top" secondItem="ONW-5R-Ge8" secondAttribute="bottom" id="RcS-C6-23z"/>
                                     <constraint firstItem="ONW-5R-Ge8" firstAttribute="top" secondItem="jNH-U8-g6Q" secondAttribute="bottom" constant="9" id="WcX-QR-nnJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="MEV-gq-tN2" secondAttribute="trailing" constant="36" id="ceZ-K5-emc"/>
                                     <constraint firstItem="SR4-wW-o85" firstAttribute="leading" secondItem="QOB-Xg-u2l" secondAttribute="leading" id="czz-lQ-XXS"/>
                                     <constraint firstItem="jNH-U8-g6Q" firstAttribute="bottom" secondItem="SR4-wW-o85" secondAttribute="bottom" constant="42" id="ezm-6c-1Yi"/>
                                     <constraint firstItem="NO4-28-RnW" firstAttribute="centerX" secondItem="QOB-Xg-u2l" secondAttribute="centerX" id="ita-Hs-vik"/>
+                                    <constraint firstAttribute="trailing" secondItem="XiP-Ee-iqh" secondAttribute="trailing" constant="36" id="jdl-fV-jhT"/>
                                     <constraint firstItem="jNH-U8-g6Q" firstAttribute="centerX" secondItem="QOB-Xg-u2l" secondAttribute="centerX" id="kLG-Rk-VLm"/>
                                     <constraint firstItem="NO4-28-RnW" firstAttribute="leading" secondItem="QOB-Xg-u2l" secondAttribute="leading" constant="36" id="kfP-em-WzS"/>
-                                    <constraint firstItem="MEV-gq-tN2" firstAttribute="top" secondItem="kkK-Rh-DUC" secondAttribute="bottom" constant="15" id="lhH-rl-EHR"/>
-                                    <constraint firstItem="kkK-Rh-DUC" firstAttribute="centerX" secondItem="QOB-Xg-u2l" secondAttribute="centerX" id="mgw-6m-ajt"/>
+                                    <constraint firstItem="XiP-Ee-iqh" firstAttribute="centerY" secondItem="dcL-tH-a0E" secondAttribute="centerY" id="l5R-Dq-CAc"/>
                                     <constraint firstAttribute="trailing" secondItem="SR4-wW-o85" secondAttribute="trailing" id="nON-zh-3Tg"/>
+                                    <constraint firstAttribute="trailing" secondItem="dcL-tH-a0E" secondAttribute="trailing" id="tiM-eL-kgb"/>
                                     <constraint firstAttribute="bottom" secondItem="SR4-wW-o85" secondAttribute="bottom" constant="275" id="vlV-cK-wwo"/>
-                                    <constraint firstAttribute="trailing" secondItem="mmd-gQ-7uf" secondAttribute="trailing" constant="28" id="wGj-La-uOA"/>
-                                    <constraint firstItem="MEV-gq-tN2" firstAttribute="leading" secondItem="QOB-Xg-u2l" secondAttribute="leading" constant="36" id="xzb-wj-LYu"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -99,7 +119,6 @@
                         <outlet property="feedDetailView" destination="QOB-Xg-u2l" id="hJH-2a-YDb"/>
                         <outlet property="feedNicknameLabel" destination="kkK-Rh-DUC" id="P1S-m0-et3"/>
                         <outlet property="hashTagLabel" destination="NO4-28-RnW" id="FVJ-1Q-IYl"/>
-                        <outlet property="likeCountLabel" destination="mmd-gQ-7uf" id="ZPe-Kv-jFb"/>
                         <outlet property="moodImageView" destination="jNH-U8-g6Q" id="nwP-q7-gAe"/>
                     </connections>
                 </viewController>
@@ -109,6 +128,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icnHeart" width="14" height="14"/>
         <image name="journeySmileSampleImg" width="59.5" height="64"/>
         <image name="sampleHappinessImg" width="1125" height="1462"/>
         <namedColor name="White">
@@ -118,7 +138,7 @@
             <color red="0.16500000655651093" green="0.16500000655651093" blue="0.16500000655651093" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="hashtagPink">
-            <color red="1" green="0.52941176470588236" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
