--- a/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
@@ -43,7 +43,7 @@
                                     <constraint firstAttribute="height" constant="1" id="qvH-yM-D38"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOX-1A-89v">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOX-1A-89v">
                                 <rect key="frame" x="24" y="794" width="366" height="48"/>
                                 <color key="backgroundColor" name="Grey1Bg"/>
                                 <constraints>
@@ -71,11 +71,18 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증에 실패하였습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zv5-0n-zId">
+                                <rect key="frame" x="300.5" y="274" width="89.5" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" name="Red"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="tFP-bz-viz" firstAttribute="trailing" secondItem="C2e-eM-amu" secondAttribute="trailing" id="5XR-uy-DUA"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Zv5-0n-zId" secondAttribute="trailing" constant="24" id="6sZ-XP-QrE"/>
                             <constraint firstItem="C2e-eM-amu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="8QC-oc-EGi"/>
                             <constraint firstItem="U0H-qs-Fvj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="9Np-9i-03Q"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="C2e-eM-amu" secondAttribute="trailing" constant="24" id="Dth-hw-nFs"/>
@@ -83,6 +90,7 @@
                             <constraint firstItem="C2e-eM-amu" firstAttribute="top" secondItem="unh-NZ-zQn" secondAttribute="bottom" constant="32" id="Gfn-Xc-e6z"/>
                             <constraint firstItem="wOX-1A-89v" firstAttribute="top" secondItem="QG1-sf-yka" secondAttribute="bottom" constant="10" id="RRb-EZ-eCK"/>
                             <constraint firstItem="QG1-sf-yka" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="RXW-Eg-ZVp"/>
+                            <constraint firstItem="Zv5-0n-zId" firstAttribute="top" secondItem="tFP-bz-viz" secondAttribute="bottom" constant="12" id="Yny-n0-mjI"/>
                             <constraint firstItem="tFP-bz-viz" firstAttribute="top" secondItem="C2e-eM-amu" secondAttribute="bottom" constant="10" id="dKy-6f-pyu"/>
                             <constraint firstItem="tFP-bz-viz" firstAttribute="leading" secondItem="C2e-eM-amu" secondAttribute="leading" id="gV5-ee-0eo"/>
                             <constraint firstItem="wOX-1A-89v" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="kQp-66-FBd"/>
@@ -93,7 +101,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="codeTextField" destination="C2e-eM-amu" id="XHp-e2-fu4"/>
                         <outlet property="completeButton" destination="wOX-1A-89v" id="ZoJ-S5-FSN"/>
+                        <outlet property="errorLabel" destination="Zv5-0n-zId" id="FgY-mI-c3b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -109,6 +119,9 @@
         </namedColor>
         <namedColor name="Grey1Line">
             <color red="0.92500001192092896" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Red">
+            <color red="0.9179999828338623" green="0.027000000700354576" blue="0.027000000700354576" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
