--- a/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
@@ -68,12 +68,20 @@
                                     <action selector="touchNextButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ncm-i6-037"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="존재하지 않는 이메일입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cq-cX-9u5">
+                                <rect key="frame" x="280" y="199" width="110" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" name="Red"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="qlG-Pi-TuN" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="0Tz-3u-Yju"/>
+                            <constraint firstItem="8cq-cX-9u5" firstAttribute="top" secondItem="Wht-TW-o2Z" secondAttribute="bottom" constant="12" id="3Nx-rk-uxO"/>
                             <constraint firstItem="3Xi-7I-tJf" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="5c9-7G-ybt"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8cq-cX-9u5" secondAttribute="trailing" constant="24" id="FUY-Oq-rwY"/>
                             <constraint firstItem="Wht-TW-o2Z" firstAttribute="top" secondItem="qlG-Pi-TuN" secondAttribute="bottom" id="GmH-l0-Yqa"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0lv-6i-rOr" secondAttribute="trailing" constant="24" id="Jeo-vO-UWg"/>
                             <constraint firstItem="qlG-Pi-TuN" firstAttribute="top" secondItem="YRR-Og-5o1" secondAttribute="bottom" constant="30" id="T0f-aq-P6c"/>
@@ -89,6 +97,7 @@
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="qlG-Pi-TuN" id="0kd-9U-g2n"/>
+                        <outlet property="errorLabel" destination="8cq-cX-9u5" id="Ttw-Se-O7A"/>
                         <outlet property="nextButton" destination="0lv-6i-rOr" id="yM2-Z3-1lO"/>
                     </connections>
                 </viewController>
@@ -105,6 +114,9 @@
         </namedColor>
         <namedColor name="Grey1Line">
             <color red="0.92500001192092896" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Red">
+            <color red="0.9179999828338623" green="0.027000000700354576" blue="0.027000000700354576" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
